name:                wifi-keepalive
version:             0.0.0
synopsis:            Keeps a wifi connection alive.
description:         Keeps a wifi connection alive.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2013 Chris Done
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable wifi-keepalive
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5,
                     process,
                     safe
